# Tile-CIS-group

./: August CIS Notes  August CIS Notes.md  README.md  kylehelloworld.txt
CERN & Geneva General/: History.txt  Vivek_test.txt
CIS Updates/: Channels to Recalibrate.xlsx  Flag Updates.xlsx  Odd Channel Behavior.xlsx
Chicago Reports/: 08-15-2022_Jacky&Peter.pptx  ~$08-15-2022_Jacky&Peter.pptx
DCS/: LVPS-Burnout-Plot.ipynb  LVPS-Burnout-Plot.txt  LumiData.py  LvpsThresMonitor_ATLTILLV00.txt  LvpsThresMonitor_ATLTILLV01.txt  LvpsThresMonitor_ATLTILLV02.txt  LvpsThresMonitor_ATLTILLV03.txt  calc-stats.py
FCS/: FCS Setup.docx  phi_mod.cxx
L1Calo/: CMakeLists.txt  ChangeLog  Code-Explanations.md  Code-Explanations.rmd  L1Calo+TIle Calibration Code Improvements.md  Tower-Channel-Converter.ipynb  tileL1Calo.csv
L1Calo/TileCIS/: DetectorObject.h  TileBuilder.h  TileCommand.h  TileDetector.h  TileDrawerModuleCIS.h  TileState.h  TileTarget.h  editscript.h  pipeline.h
L1Calo/src/: DetectorObject.cxx  TileBuilder.cxx  TileCommand.cxx  TileDetector.cxx  TileDrawerModuleCIS.cxx  TileState.cxx  TileTarget.cxx  editscript.cpp  main.cpp  pipeline.cxx  tilecis.cxx
L1Calo/src/qt/: TileCISPanel.ui
RadMon/: Coef_05_2011.txt  Re_ no TIL radmon data Re_ Radmons for Run 3 _.eml
Reports/: LaTeX-Presentation.py
TUCS/: .asetup.save  .gitignore  ChangeLog  GIT_HOWTO.md  README  README_CIS.md  README_LASER.md  setup.sh
TUCS/src/: go.py  (+12 more)
Tile Cal CIS Calib/: LaTeX-Presentation.py
Wiki Update Document/: CERN Tech Setup Complete Guide.docx  CIS Glossary.docx  L1Calo Status.docx  (+3 more)
(+1000 files in other folders)
